add editoneproduct Page and CSS Signup Page

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -66,6 +66,7 @@ tr{
 	height: 16pt;
 }
 
+/* Nav */
 ul {
 	position: fixed;
 	top: 0;
@@ -78,12 +79,10 @@ ul {
 	background-color: var(--brown);
 	box-shadow: 2px 2px 5px gray; 
 }
-
 li {
 	float: left;
 	height: 60px;
 }
-
 li a {
 	display: block;
 	color: white;
@@ -91,7 +90,6 @@ li a {
 	padding: 4px 16px;
 	text-decoration: none;
 }
-
 .profilepicture{
 	border-radius: 50px;
 	width: 50px;
