--- a/src/main/resources/templates/firstpage.html
+++ b/src/main/resources/templates/firstpage.html
@@ -63,6 +63,7 @@ body{
 	margin-top: 6%; 
 }
 
+/* Nav */
 ul {
 	position: fixed;
 	top: 0;
@@ -74,12 +75,10 @@ ul {
 	background-color: var(--brown);
 	box-shadow: 2px 2px 5px gray; 
 }
-
 li {
 	float: left;
 	height: 60px;
 }
-
 li a {
 	display: block;
 	color: white;
@@ -87,13 +86,11 @@ li a {
 	padding: 4px 16px;
 	text-decoration: none;
 }
-
 .profilepicture{
 	border-radius: 50px;
 	width: 50px;
 	height: 50px;
 }
-
 .logout{
 	position: fixed;
 	top: 35px;
