--- a/src/main/resources/templates/addoneproduct.html
+++ b/src/main/resources/templates/addoneproduct.html
@@ -5,9 +5,11 @@
 <title>ร้านขายของน้องหมา </title>
 <script>
 	function show(x){
+		//if product.getSize != Null
 		if(x == 'y'){
 			document.getElementById("num").innerHTML = 'S <input type="number" value="s">M <input type="number" value="m"><br>L <input type="number" value="l">XL <input type="number" value="xl">'
 		}
+		//if product.getSize == Null
 		if(x == 'n'){
 			document.getElementById("num").innerHTML = '<input type="number" value="">'
 		}
@@ -20,6 +22,10 @@
 	<tr>
 		<td>ใส่รูป </td>
 		<td><input type="file"></td>
+	</tr>
+	<tr>
+		<td>ชื่อสินค้า </td>
+		<td><input type="text"></td>
 	</tr>
 	<tr>
 		<td>ราคา </td>
@@ -40,6 +46,10 @@
 				XL <input type="number" value="xl">
 			</div>
 		</td>
+	</tr>
+	<tr>
+		<td>น้ำหนักสินค้า </td>
+		<td><input type="number">กก.</td>
 	</tr>
 </table>
 <input type="submit">
