--- a/src/main/resources/templates/addoneproduct.html
+++ b/src/main/resources/templates/addoneproduct.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>ร้านขายของน้องหมา </title>
+<style type="text/css">
+td{
+	border: solid 2px gray;
+}
+</style>
 <script>
 	function show(x){
 		//if product.getSize != Null
