--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,17 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>ร้านขายของน้องหมา </title>
+<title>ร้านขายของน้องหมา</title>
 <link rel="stylesheet" th:href="@{/CSS/Sfirstpage.css}">
-<link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@300;400&display=swap" rel="stylesheet">
+<link
+	href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@300;400&display=swap"
+	rel="stylesheet">
 <style>
-:root {
-  --brown: #cbaf87;
-  --x: #c7b198;
-  --brown2: #f4ebc1;
+:root { 
+	--brown: #cbaf87; 
+	--x: #c7b198; 
+	--brown2: #f4ebc1;
 }
 
-body{
+body {
 	font-family: 'Bai Jamjuree', sans-serif;
 	height: 100vh;
 	display: flex;
@@ -20,16 +22,17 @@ body{
 	color: gray;
 }
 
-.center{
-  	display: flex;
+.center {
+	display: flex;
 	align-items: center;
 	justify-content: center;
 }
-h1{
+
+h1 {
 	margin: -10% 0% 6% 0%;
 }
 
-.incorrect{
+.incorrect {
 	color: red;
 }
 
@@ -42,12 +45,13 @@ table {
 	border-radius: 6px;
 }
 
-input[type="text"],input[type="password"]{
+input[type="text"], input[type="password"] {
 	height: 16pt;
 	border-radius: 16pt;
 	border: 1px solid gray;
 }
-input[type="submit"]{
+
+input[type="submit"] {
 	font-family: 'Bai Jamjuree', sans-serif;
 	background-color: #1592E6;
 	border: none;
@@ -62,7 +66,8 @@ input[type="submit"]{
 	width: 100%;
 	color: white;
 }
-tr{
+
+tr {
 	height: 16pt;
 }
 
@@ -77,12 +82,14 @@ ul {
 	padding: 0;
 	overflow: hidden;
 	background-color: var(--brown);
-	box-shadow: 2px 2px 5px gray; 
+	box-shadow: 2px 2px 5px gray;
 }
+
 li {
 	float: left;
 	height: 60px;
 }
+
 li a {
 	display: block;
 	color: white;
@@ -90,48 +97,53 @@ li a {
 	padding: 4px 16px;
 	text-decoration: none;
 }
-.profilepicture{
+
+.profilepicture {
 	border-radius: 50px;
 	width: 50px;
 	height: 50px;
 }
 
 /* Login */
-.loginwhitebg{
+.loginwhitebg {
 	flex-direction: column;
-	background-color: rgba(255,255,255,0.75);
+	background-color: rgba(255, 255, 255, 0.75);
 	border-radius: 0 100px;
 	width: 60%;
 	height: 80%;
 	box-shadow: 5px 5px 5px gray;
-	margin-top: 6%; 
+	margin-top: 6%;
 }
-.col1{
+
+.col1 {
 	width: 49%;
 	height: 92%;
 	margin: 4% 0 4% 0;
 	float: left;
 	border-right: 1px gray solid;
 }
-.col2{
+
+.col2 {
 	width: 50%;
 	height: 100%;
 	float: right;
 	flex-direction: column;
 }
 
-.forgotpw{
+.forgotpw {
 	font-size: 10pt;
 	float: right;
 }
-.newuser{
+
+.newuser {
 	display: flex;
 	align-items: flex-end;
 	width: 100%;
 	height: 30%;
 	font-size: 10pt;
 }
-.signup{
+
+.signup {
 	color: #1592E6;
 	text-decoration: none;
 	font-size: 14pt;
@@ -140,38 +152,46 @@ li a {
 </head>
 <body class="center">
 	<ul>
-		<li><a href="/"><img class="profilepicture" th:src="@{/Pembroke-Welsh-Corgi-Puppies-Lying-Down.jpg}"></a></li>
+		<li><a href="/"><img class="profilepicture"
+				th:src="@{/Pembroke-Welsh-Corgi-Puppies-Lying-Down.jpg}"></a></li>
 		<li class="center"><a href="/">ร้านขายของน้องหมา </a></li>
 	</ul>
 	<div class="loginwhitebg">
-	<div class="col1 center">
-		<p>ข้อมูลผู้ก่อตั้ง</p>
-	</div>
-	<div class="col2 center">
-		<h1>เข้าสู่ระบบ</h1>
-		<form action="#" th:action="@{/dologin}" method="post" th:object="${user}"> 
-			<table>
-			<tbody>
-				<tr></tr>
-				<tr>
-					<td>อีเมล </td>
-					<td><input type="text" name="email" th:field="*{email}"></td>
-				</tr>
-				<tr></tr>
-				<tr>
-					<td>รหัสผ่าน </td>
-					<td><input type="password" name="password" th:field="*{password}"></td>
-				</tr>
-				<tr><td colspan="3">&nbsp;</td></tr>
-			</tbody>
-			</table>
-			<input type="submit" value="เข้าสู่ระบบ" >
-			<a href="/forgotpw" class="forgotpw">ลืมรหัสผ่าน </a>
-			<p class="center newuser">ผู้ใช้งานใหม่?... <a href="/signup" class="signup">สร้างบัญชี </a></p>
-		</form>  
-		<!-- <p th:if="${correct == false}" class="incorrect">Your name or password is incorrect.</p> -->
-	</div>
-	
+		<div class="col1 center">
+			<p>ข้อมูลผู้ก่อตั้ง</p>
+		</div>
+		<div class="col2 center">
+			<h1>เข้าสู่ระบบ</h1>
+			<form action="#" th:action="@{/dologin}" method="post"
+				th:object="${user}">
+				<table>
+					<tbody>
+						<tr></tr>
+						<tr>
+							<td>อีเมล</td>
+							<td><input type="text" name="email" th:field="*{email}"></td>
+						</tr>
+						<tr></tr>
+						<tr>
+							<td>รหัสผ่าน</td>
+							<td><input type="password" name="password"
+								th:field="*{password}"></td>
+						</tr>
+						<tr>
+							<td colspan="3">&nbsp;</td>
+						</tr>
+					</tbody>
+				</table>
+				<input type="submit" value="เข้าสู่ระบบ"> 
+				<a href="/forgotpw" class="forgotpw">ลืมรหัสผ่าน </a>
+				<p class="center newuser">
+					ผู้ใช้งานใหม่?... <a href="/signup" class="signup">สร้างบัญชี </a>
+				</p>
+				<p th:if="${message == true}" style="color: red;">อีเมล์หรือรหัสผ่านของคุณไม่ถูกต้อง</p>
+			</form>
+
+		</div>
+
 	</div>
 </body>
 </html>
