--- a/src/main/resources/templates/addcategory.html
+++ b/src/main/resources/templates/addcategory.html
@@ -6,17 +6,19 @@
 </head>
 <body>
 	<a href="/editproduct">back</a>
-	<form action="#">
+	<form action="#" th:action="@{/savecat}" th:object="${category}" method="post" enctype="multipart/form-data">
 		<table>
 			<tr>
 				<td>ชื่อ Category</td>
-				<td><input type="text"></td>
+				<td><input type="text" th:field="*{nameCat}"></td>
 			</tr>
 			<!-- ต้อง input S/M/L/"(ไม่มี)" ลงใน Name สินค้าก่อน -->
 			<tr>
 				<td>รายละเอียดเพิ่มเติม</td>
-				<td><textarea rows="10" cols="20"></textarea><br> <input
-					type="file"></td>
+				<td>
+					<textarea th:field="*{detailCat}" rows="10" cols="20"></textarea><br> 
+					<input type="file" name="imageFile">
+				</td>
 			</tr>
 			<tr>
 				<td></td>
