--- a/src/main/resources/templates/changeinfo.html
+++ b/src/main/resources/templates/changeinfo.html
@@ -200,7 +200,7 @@ function togglePW() {
 			</tr>
 			<tr>
 				<td>ที่อยู่:*</td>
-				<td><textarea class="inputaddress" th:value="${session.user.getAddress()}" row="4" column="50" th:field="*{address}"></textarea></td>
+				<td><textarea class="inputaddress" th:value="${session.user.getAddress()}" rows="4" cols="50" th:field="*{address}"></textarea></td>
 			</tr>
 			<tr><td colspan="2">&nbsp;</td></tr>
 			<tr>
