--- a/src/main/resources/templates/addcategory.html
+++ b/src/main/resources/templates/addcategory.html
@@ -10,7 +10,7 @@
 		<table>
 			<tr>
 				<td>ชื่อ Category</td>
-				<td><input type="text" th:field="*{nameCat}"></td>
+				<td><input type="text" th:field="*{nameCat}" required></td>
 			</tr>
 			<!-- ต้อง input S/M/L/"(ไม่มี)" ลงใน Name สินค้าก่อน -->
 			<tr>
