--- a/src/main/resources/templates/addoneproduct.html
+++ b/src/main/resources/templates/addoneproduct.html
@@ -22,41 +22,42 @@ td{
 </script>
 </head>
 <body>
-<a href="/editproduct">back</a>
-<table>
-	<tr>
-		<td>ใส่รูป </td>
-		<td><input type="file"></td>
-	</tr>
-	<tr>
-		<td>ชื่อสินค้า </td>
-		<td><input type="text"></td>
-	</tr>
-	<tr>
-		<td>ราคา </td>
-		<td><input type="number"></td>
-	</tr>
-	<!-- ต้อง input S/M/L/"(ไม่มี)" ลงใน Name สินค้าก่อน -->
-	<tr>
-		<td>จำนวน </td>
-		<td>
-			<form name="myForm">
-				<input type="radio" name="have" onclick="show('y')" checked="checked"> มี size
-				<input type="radio" name="have" onclick="show('n')"> ไม่มี size
-			</form>
-			<div id="num">
-				S <input type="number" value="s">
-				M <input type="number" value="m"><br>
-				L <input type="number" value="l">
-				XL <input type="number" value="xl">
-			</div>
-		</td>
-	</tr>
-	<tr>
-		<td>น้ำหนักสินค้า </td>
-		<td><input type="number">กก.</td>
-	</tr>
-</table>
-<input type="submit">
+	<a href="/editproduct">back</a>
+	<form action="#" th:action="@{/saveproduct}" th:object="${product}" method="post" enctype="multipart/form-data">
+		<table>
+			<tr>
+				<td>ใส่รูป </td>
+				<td><input type="file" name="imageFile"></td>
+			</tr>
+			<tr>
+				<td>ชื่อสินค้า </td>
+				<td><input type="text" th:field="*{nameProduct}"></td>
+			</tr>
+			<tr>
+				<td>ราคา </td>
+				<td><input type="number" th:field="*{price}"></td>
+			</tr>
+			<!-- ต้อง input S/M/L/"(ไม่มี)" ลงใน Name สินค้าก่อน -->
+			<tr>
+				<td>จำนวน </td>
+				<td>
+					<input type="radio" name="have" onclick="show('y')" checked="checked"> มี size
+					<input type="radio" name="have" onclick="show('n')"> ไม่มี size
+					<div id="num">
+						S <input type="number" value="s">
+						M <input type="number" value="m"><br>
+						L <input type="number" value="l">
+						XL <input type="number" value="xl">
+					</div>
+				</td>
+			</tr>
+			<tr>
+				<td>น้ำหนักสินค้า </td>
+				<td><input type="number" th:field="*{weight}">กรัม</td>
+			</tr>
+		</table>
+		<input type="submit" value="Submit" name="button">
+	</form>
+	
 </body>
 </html>
