--- a/src/main/resources/templates/addoneproduct.html
+++ b/src/main/resources/templates/addoneproduct.html
@@ -12,11 +12,11 @@ td{
 	function show(x){
 		//if product.getSize != Null
 		if(x == 'y'){
-			document.getElementById("num").innerHTML = 'S <input type="number" value="s">M <input type="number" value="m"><br>L <input type="number" value="l">XL <input type="number" value="xl">'
+			document.getElementById("num").innerHTML = 'S <input type="number" value="s" name="numS">M <input type="number" value="m" name="numM"><br>L <input type="number" value="l" name="numL">XL <input type="number" value="xl" name="numXL">'
 		}
 		//if product.getSize == Null
 		if(x == 'n'){
-			document.getElementById("num").innerHTML = '<input type="number" value="">'
+			document.getElementById("num").innerHTML = '<input type="number" value="" name="num">'
 		}
 	}
 </script>
@@ -41,13 +41,13 @@ td{
 			<tr>
 				<td>จำนวน </td>
 				<td>
-					<input type="radio" name="have" onclick="show('y')" checked="checked"> มี size
-					<input type="radio" name="have" onclick="show('n')"> ไม่มี size
+					<input type="radio" name="have" value="y" onclick="show('y')" checked="checked"> มี size
+					<input type="radio" name="have" value="n" onclick="show('n')"> ไม่มี size
 					<div id="num">
-						S <input type="number" value="s">
-						M <input type="number" value="m"><br>
-						L <input type="number" value="l">
-						XL <input type="number" value="xl">
+						S <input type="number" value="s" name="numS">
+						M <input type="number" value="m" name="numM"><br>
+						L <input type="number" value="l" name="numL">
+						XL <input type="number" value="xl" name="numXL">
 					</div>
 				</td>
 			</tr>
@@ -56,6 +56,7 @@ td{
 				<td><input type="number" th:field="*{weight}">กรัม</td>
 			</tr>
 		</table>
+		<input type="hidden" th:value="${product.getCategory()}" th:field="*{category}">
 		<input type="submit" value="Submit" name="button">
 	</form>
 	
