add,show product

--- a/src/main/resources/templates/editproduct.html
+++ b/src/main/resources/templates/editproduct.html
@@ -33,19 +33,24 @@ td{
 			<div class="center">
 				<a th:href="@{'/addoneproduct/' + ${cat.getIdCategory()}}">เพิ่มสินค้า </a>
 			</div>
-			<div>
-				เสื้อ 1 <input type="button" value="delete"><br>
-				S <input type="number">
-				M <input type="number"><br>
-				L <input type="number">
-				XL <input type="number"><br>
-			</div>
-			<div>
-				เสื้อ 2 <input type="button" value="delete"><br>
-				S <input type="number">
-				M <input type="number"><br>
-				L <input type="number">
-				XL <input type="number"><br>
+			<div th:each="product: ${products}">
+				<a th:href="@{'/editoneproduct/' + ${product.getIdProduct()}}">
+					<img style="width=100px;" th:if="${product.getPhotoProduct() == null}" alt="can't download" src="https://scontent.fbkk22-2.fna.fbcdn.net/v/t1.0-9/83968655_1508266912688925_789788986167001088_o.jpg?_nc_cat=106&_nc_sid=09cbfe&_nc_eui2=AeEmS9a7V_5EfIh3isYQehQUdnXS_5a1mcd2ddL_lrWZxwCZekQyIsKnHov1EeLDg-A_dWPuo1Ea4PKB91i3xWso&_nc_ohc=O0b9t4pD7DEAX8oKyDd&_nc_ht=scontent.fbkk22-2.fna&oh=abb0c36270eb66c217b41b3c3c035c2d&oe=5F85E625">
+					<img style="width=100px;" th:if="${product.getPhotoProduct() != null}" alt="can't download" th:src="@{'data:image/jpeg;base64,'+${product.getPhotoProduct()}}">
+				</a>
+				<a th:href="@{'/editoneproduct/' + ${product.getIdProduct()}}">
+					<span th:text="${product.getNameProduct()}"></span>
+				</a><input type="button" value="delete"><br>
+				
+				<div th:if="${product.getNumberStock() == null}">
+					S <span th:text="${product.getS()}"></span><br>
+					M <span th:text="${product.getM()}"></span><br>
+					L <span th:text="${product.getL()}"></span><br>
+					XL <span th:text="${product.getXl()}"></span><br>
+				</div>
+				<div th:if="${product.getNumberStock() != null}">
+					Stock <span th:text="${product.getNumberStock()}"></span><br>
+				</div>
 			</div>
 		</td>
 	</tr>
