--- a/src/main/resources/templates/addoneproduct.html
+++ b/src/main/resources/templates/addoneproduct.html
@@ -57,6 +57,7 @@ td{
 			</tr>
 		</table>
 		<input type="hidden" th:value="${product.getCategory()}" th:field="*{category}">
+		<input type="hidden" th:value="${idcat}" name="idcat">
 		<input type="submit" value="Submit" name="button">
 	</form>
 	
