--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -130,7 +130,7 @@ input[type="submit"]{
 		<li class="center"><a href="/firstpage">ร้านขายของน้องหมา </a></li>
 	</ul>
 	<div class="signupwhitebg center">
-	<a href="/login" class="back"><</a>
+	<a href="/" class="back"><</a>
 	<h1 align="center">สร้างบัญชี </h1>
 	<form action="#" th:action="@{/savemem}" th:object="${user}" method="post" enctype="multipart/form-data">
 		
