--- a/src/main/resources/templates/Sfirstpage.html
+++ b/src/main/resources/templates/Sfirstpage.html
@@ -215,9 +215,9 @@ li a {
 		</div>
 	</ul>
 	<div class="whitebg center">
-		<a href="/transfercheck" class="btnfirstpage center">ตรวจสอบ </a><br>
-		<a href="#mustsend" class="btnfirstpage center">ต้องจัดส่ง </a><br>
-		<a href="#complete" class="btnfirstpage center">จัดส่งแล้ว </a><br>
+		<a href="/checking" class="btnfirstpage center">ตรวจสอบ </a><br>
+		<a href="/tracking" class="btnfirstpage center">ต้องจัดส่ง </a><br>
+		<a href="/complete" class="btnfirstpage center">จัดส่งแล้ว </a><br>
 	</div>
 </body>
 </html>
