--- a/src/main/resources/templates/adddeliveryprice.html
+++ b/src/main/resources/templates/adddeliveryprice.html
@@ -14,7 +14,12 @@
 <table>
 	<tr>
 		<td>ชื่อบริการขนส่ง </td>
-		<td><input type="text"></td>
+		<td>
+		<select>
+			<option>xxx</option>
+		</select>
+		</td>
+		<td><input type="button" value="เพิ่มชื่อบริการขนส่ง "></td>
 	</tr>
 	<tr>
 		<td>น้ำหนักสูงสุด </td>
