add editaccount page and editdelivery, editaccount button position

--- a/src/main/resources/templates/adddeliveryprice.html
+++ b/src/main/resources/templates/adddeliveryprice.html
@@ -9,7 +9,7 @@
 </style>
 </head>
 <body>
-<a href="/firstpage" class="back"><</a>
+<a href="/myinfo" class="back"><</a>
 <h3>เพิ่มราคาบริการขนส่งสินค้า </h3>
 <table>
 	<tr>
