edit css editdelivery,editaccount position

--- a/src/main/resources/templates/myinfo.html
+++ b/src/main/resources/templates/myinfo.html
@@ -131,6 +131,25 @@ td p{
 	cursor: pointer;
 }
 
+.editaccount{
+	position: fixed;
+	top: 80px;
+	right: 20px;
+	color: red;
+	font-size: 18px;
+	cursor: pointer;
+	text-decoration: underline;
+}
+.editdelivery{
+	position: fixed;
+	top: 120px;
+	right: 20px;
+	color: red;
+	font-size: 18px;
+	cursor: pointer;
+	text-decoration: underline;
+}
+
 </style>
 <script type="text/javascript">
 function togglePW() {
