--- a/src/main/resources/templates/Sfirstpage.html
+++ b/src/main/resources/templates/Sfirstpage.html
@@ -201,7 +201,7 @@ li a {
 		<li style="float:right"><a href="/myinfo" th:text="${session.user.getName()}"></a></li>
 		<a href="/logout" class="logout">logout</a>
 		<div class="white">
-		<a href="/editproduct/1" class="editproduct">แก้ไขรายการสินค้า </a>
+		<a href="/editproduct" class="editproduct">แก้ไขรายการสินค้า </a>
 		</div>
 	</ul>
 	<div class="whitebg center">
